@@ -5,6 +5,8 @@
 25.5
 -----
 * [***] Use web-based sign-in flow (hidden under a feature flag) [#23675]
+* [*] Enable navigating to an individual post's stats from within the "view more" screen for author stats. [#23761]
+* [*] [Jetpack-only] Enable pubishing to non-Jetpack sites when sharing content to the Jetpack app. [#23778]
 
 25.4
 -----
